fix: :bug: make background SVG responsive on mobile

--- a/src/components/MultiStepForm/StepNav/StepNav.css
+++ b/src/components/MultiStepForm/StepNav/StepNav.css
@@ -84,6 +84,8 @@
 
     .bg-mobile {
         display: block;
+        width: 100%;
+        height: auto;
     }
 
     .progress-steps {
